// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Input Model component renders custom input modal with multiple arguments 1`] = `
<EuiOverlayMask>
  <EuiModal
    initialFocus="[name=input]"
    onClose={[MockFunction]}
  >
    <EuiModalHeader>
      <EuiModalHeaderTitle>
        Input test
      </EuiModalHeaderTitle>
    </EuiModalHeader>
    <EuiModalBody>
      <EuiForm>
        <EuiCompressedFormRow
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText="Help Text"
          label="test label"
          labelType="label"
        >
          <EuiCompressedFieldText
            data-test-subj="customModalFieldText"
            name="input"
            onChange={[Function]}
            value="Test Panel"
          />
        </EuiCompressedFormRow>
      </EuiForm>
    </EuiModalBody>
    <EuiModalFooter>
      <EuiSmallButtonEmpty
        onClick={[MockFunction]}
      >
        btn test
      </EuiSmallButtonEmpty>
      <EuiSmallButton
        data-test-subj="runModalButton"
        fill={true}
        onClick={[Function]}
      >
        btn test 2
      </EuiSmallButton>
    </EuiModalFooter>
  </EuiModal>
</EuiOverlayMask>
`;

exports[`Custom Input Model component renders custom input modal with single argument 1`] = `
<EuiOverlayMask>
  <EuiModal
    initialFocus="[name=input]"
    onClose={[MockFunction]}
  >
    <EuiModalHeader>
      <EuiModalHeaderTitle>
        Input test
      </EuiModalHeaderTitle>
    </EuiModalHeader>
    <EuiModalBody>
      <EuiForm>
        <EuiCompressedFormRow
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          label="test label"
          labelType="label"
        >
          <EuiCompressedFieldText
            data-test-subj="customModalFieldText"
            name="input"
            onChange={[Function]}
            value=""
          />
        </EuiCompressedFormRow>
      </EuiForm>
    </EuiModalBody>
    <EuiModalFooter>
      <EuiSmallButtonEmpty
        onClick={[MockFunction]}
      >
        btn test
      </EuiSmallButtonEmpty>
      <EuiSmallButton
        data-test-subj="runModalButton"
        fill={true}
        onClick={[Function]}
      >
        btn test 2
      </EuiSmallButton>
    </EuiModalFooter>
  </EuiModal>
</EuiOverlayMask>
`;
